--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,30 @@
     height: 100vh;
 }
 
-.kitteh-img-row {
-    margin-top: 20px;
+.header-row {
+    padding: 60px 0;
+}
+
+ul {
+    border-right: 2px solid #000;
+    padding-right: 240px;
+    max-height: 600px;
+    overflow:auto;
+}
+
+li {
+    list-style-type: none;
+}
+
+.img-list-item img {
+    width: 200px;
+    margin-bottom: 20px;
+}
+
+.img-display-div {
+    padding-top: 100px;
+}
+
+.img-display {
+    width: 400px;
 }
