--- a/css/app.css
+++ b/css/app.css
@@ -10,16 +10,31 @@ ul {
     border-right: 2px solid #000;
     padding-right: 240px;
     max-height: 600px;
-    overflow:auto;
+    overflow: auto;
 }
 
 li {
     list-style-type: none;
+    position: relative;
 }
 
 .img-list-item img {
     width: 200px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+.img-list-name {
+    position: absolute;
+    color: #fff;
+    top: 6px;
+    left: 12px;
+}
+
+.img-list-count {
+    position: absolute;
+    color: #fff;
+    top: 164px;
+    left: 170px;
 }
 
 .img-display-div {
