Final version. Finished switch, works properly with displayImg id. Also created initial starting text that disappears on first cat selection

--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,10 @@ li {
     position: relative;
 }
 
+#intro {
+    padding-top: 160px;
+}
+
 .img-list-item img {
     width: 200px;
     padding-bottom: 20px;
